--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -137,34 +137,34 @@ li:hover {
 	width: 100%;
 
 }
-#contact {
+.form-section {
 	width: 50%;
 margin: auto;
 }
-#contact > * {
+.form-section > * {
 	text-align: center;
 
 }
-#contact h2{
+.form-section h2{
 	margin-bottom: 20px;
 }
-#contact form {
+.form-section form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+.form-section input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+.form-section label {
 	margin: 2em 0 1em 0;
 }
-#contact textarea {
+.form-section textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -186,3 +186,33 @@ footer nav ul {
 	margin: 2em
 }
 
+.category-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.category-buttons button {
+    font-family: 'Syne';
+    font-weight: 700;
+    color: #1D6154;
+    background-color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 10px;
+    border-radius: 60px;
+    cursor: pointer;
+	border-color: #1D6154;
+	border-style: solid;
+	border-width: 1px;
+}
+
+.category-buttons button:hover {
+    background-color: #1D6154;
+    color: white;
+}
+
+.category-buttons button.selected {
+    background-color: #1D6154;
+    color: white;
+}
