--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -216,3 +216,58 @@ footer nav ul {
     background-color: #1D6154;
     color: white;
 }
+
+.popup {
+	position: absolute;
+	/* top: 140px; */
+	top: 45%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	border-radius: 30px;
+	border: red 2px solid;
+	padding: 20px;
+	font-size: 32px;
+	background-color: white;
+	color: red;
+
+	transition: opacity 2s ease-in-out;
+}
+
+.fade-out {
+	opacity: 0;
+}
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal-content {
+	display: flex;
+    justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	max-height: calc(80vh - 20px);
+	width: 30%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
