add the add work modal

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -138,7 +138,7 @@ li:hover {
 }
 .form-section {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 .form-section > * {
 	text-align: center;
@@ -168,7 +168,7 @@ margin: auto;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"], .add-work-button{
+input[type="submit"], .add-work-button, .submit-button{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -327,3 +327,47 @@ footer nav ul {
 	gap: 10px;
 	margin-bottom: 1em;
   }
+
+.back-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#add-work-form {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    gap: 20px;
+}
+
+.upload-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 169px;
+    background-color: #E8F1F6;
+    border-radius: 3px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.upload-label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+#image-upload {
+    display: none;
+}
+
+#preview-image {
+    max-height: 169px;
+    max-width: 100%;
+    object-fit: contain;
+}
