--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -59,7 +59,7 @@ header {
 	margin: 50px 0
 }
 section {
-	margin: 50px 0
+	margin: 90px 0
 }
 
 h1{
@@ -89,6 +89,11 @@ nav ul {
 	align-items: center;
 	list-style-type: none;
 
+}
+
+nav ul a {
+	text-decoration: none;
+	color: inherit;
 }
 nav li {
 	padding: 0 10px;
@@ -138,7 +143,7 @@ li:hover {
 
 }
 .form-section {
-	width: 50%;
+	width: 379px;
 	margin: auto;
 }
 .form-section > * {
@@ -189,7 +194,9 @@ footer nav ul {
 .category-buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+	gap: 10px;
+    margin-bottom: 3em;
+	
 }
 
 .category-buttons button {
@@ -199,7 +206,6 @@ footer nav ul {
     background-color: white;
     border: none;
     padding: 10px 20px;
-    margin: 0 10px;
     border-radius: 60px;
     cursor: pointer;
 	border-color: #1D6154;
@@ -238,7 +244,7 @@ footer nav ul {
 	opacity: 0;
 }
 
-.modal {
+.modal-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -251,19 +257,25 @@ footer nav ul {
     z-index: 1000;
 }
 
-.modal-content {
+.modal {
 	display: flex;
-    justify-content: center;
+	justify-content: center;
+    align-items: center;
+	height: 688px;
+	width: 630px;
+	background-color: white;
+    border-radius: 10px;
+	position: relative;
+}
+
+.modal-content {
+	width: 100%;
+    height: 100%;
+	margin: 30px;
+	display: flex;
+    justify-content: space-evenly;
 	flex-direction: column;
 	align-items: center;
-	max-height: 80vh;
-	width: 630px;
-    background-color: white;
-    padding: 30px;
-    border-radius: 10px;
-    position: relative;
-	padding-bottom: 15px;
-	overflow: hidden;
 }
 
 .close-button {
@@ -277,22 +289,24 @@ footer nav ul {
 .modal-gallery {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	gap: 10px;
-	width: 100%;
-	padding: 20px 0;
+	gap: 20px 10px;
 	max-height: 400px;
 	overflow-y: auto;
 	margin-bottom: 20px;
+	margin-top: 30px;
   }
 
   .modal-gallery img {
-	width: 100%;
-	height: 100px;
 	object-fit: cover;
   }
 
   .modal-gallery figure {
+	display: flex;
+	justify-content: center;
 	position: relative;
+	height: 102px;
+	width: 76px;
+	margin: 0 auto;
   }
 
   #gallery-modal-template .modal-content {
@@ -345,7 +359,7 @@ footer nav ul {
 	align-items: center;
 	width: 100%;
 	gap: 10px;
-	margin-bottom: 1em;
+	margin-bottom: 3em;
   }
 
 .spacer, .edit-button {
@@ -364,12 +378,11 @@ footer nav ul {
     cursor: pointer;
 }
 
-#add-work-form {
+/* #add-work-form {
     display: flex;
     flex-direction: column;
     width: 80%;
-    gap: 20px;
-}
+} */
 
 .upload-container {
     display: flex;
@@ -423,13 +436,15 @@ footer nav ul {
 .error-message {
     color: #d65353;
     font-size: 12px;
-    margin-top: 1px;
+    margin-top: 5px;
     display: block;
     min-height: 15px;
 }
 
 .modal .form-section {
-    width: 100%;
+	display: flex;
+    flex-direction: column;
+    width: 420px;
     margin: 0;
 }
 
@@ -484,4 +499,9 @@ select:focus {
   input, select, textarea {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	border: none;
+  }
+
+  .form-section a {
+	text-decoration: underline;
+	color: #000000;
   }
