--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -28,8 +28,16 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+main {
+    flex: 1;
+}
+
 body {
-	line-height: 1;
+	background-color: #FFFEF8;
+	display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 ol, ul {
 	list-style: none;
@@ -191,6 +199,12 @@ footer nav ul {
 	margin: 2em
 }
 
+footer {
+	background-color: #ffffff;
+	width: 100vw;
+    margin-left: calc(-50vw + 50%); 
+}
+
 .category-buttons {
     display: flex;
     justify-content: center;
@@ -280,9 +294,9 @@ footer nav ul {
 
 .close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
+    top: 20px;
+    right: 20px;
+    font-size: 15px;
     cursor: pointer;
 }
 
@@ -372,9 +386,9 @@ footer nav ul {
 
 .back-button {
     position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 24px;
+    top: 20px;
+    left: 20px;
+    font-size: 15px;
     cursor: pointer;
 }
 
